# sv2-core-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml  integration-tests.yml  pr-integration-tests-sv2-core.yml
binary/codec/: Cargo.toml
codec/: Cargo.toml
common/: Cargo.toml
ffi/: Cargo.toml
framing/: Cargo.toml
network-helpers/: Cargo.toml
roles-logic/: Cargo.toml
roles-utils/config-helpers/: Cargo.toml
roles-utils/network-helpers/: Cargo.toml
roles-utils/rpc/: Cargo.toml
scripts/: run-integration-tests.sh
subprotocols/common-messages/: Cargo.toml
subprotocols/job-declaration/: Cargo.toml
subprotocols/mining/: Cargo.toml
subprotocols/template-distribution/: Cargo.toml
sv1/: Cargo.toml
sv2/binary-sv2/codec/: Cargo.toml
sv2/codec-sv2/: Cargo.toml
sv2/framing-sv2/: Cargo.toml
sv2/network-helpers/: Cargo.toml
sv2/roles-logic-sv2/: Cargo.toml
tests/fuzz-tests/: Cargo.toml
utils/key-utils/src/: lib.rs
