[workspace]
resolver = "2"

members = [
    "protocols/v1",
    "protocols/v2/binary-sv2/codec",
    "protocols/v2/binary-sv2/derive_codec", 
    "protocols/v2/binary-sv2",
    "protocols/v2/noise-sv2",
    "protocols/v2/framing-sv2",
    "protocols/v2/codec-sv2",
    "protocols/v2/subprotocols/common-messages",
    "protocols/v2/subprotocols/template-distribution",
    "protocols/v2/subprotocols/mining",
    "protocols/v2/subprotocols/job-declaration",
    "protocols/v2/sv2-ffi",
    "protocols/v2/roles-logic-sv2",
    "common",
    "utils/buffer",
    "utils/error-handling",
    "utils/key-utils",
    "utils/bip32-key-derivation"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1

[package]
name = "sv2-core-test"
version = "0.1.0"
edition = "2021"
publish = false
