[workspace]
resolver = "2"

members = [
    "sv1",
    "binary/codec",
    "binary/derive_codec", 
    "binary",
    "noise",
    "framing",
    "codec",
    "subprotocols/common-messages",
    "subprotocols/template-distribution",
    "subprotocols/mining",
    "subprotocols/job-declaration",
    "ffi",
    "roles-logic",
    "network-helpers",
    "common",
    "utils/buffer",
    "utils/error-handling",
    "utils/key-utils",
    "utils/bip32-key-derivation"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1