[workspace]
resolver = "2"

members = [
    "sv1",
    "sv2/binary-sv2/codec",
    "sv2/binary-sv2/derive_codec", 
    "sv2/binary-sv2",
    "sv2/noise-sv2",
    "sv2/framing-sv2",
    "sv2/codec-sv2",
    "sv2/subprotocols/common-messages",
    "sv2/subprotocols/template-distribution",
    "sv2/subprotocols/mining",
    "sv2/subprotocols/job-declaration",
    "sv2/sv2-ffi",
    "sv2/roles-logic-sv2",
    "sv2/channels-sv2",
    "sv2/parsers-sv2",
    "sv2/network-helpers",
    "common",
    "utils/buffer",
    "utils/error-handling",
    "utils/key-utils",
    "utils/bip32-key-derivation"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1